video: kick chewie, hello media_kit

--- a/packages/flyer_chat_video_message/pubspec.yaml
+++ b/packages/flyer_chat_video_message/pubspec.yaml
@@ -12,13 +12,13 @@ environment:
 resolution: workspace
 
 dependencies:
-  chewie: ^1.12.1
   flutter:
     sdk: flutter
   flutter_chat_core: ^2.7.1
-  provider: ^6.1.5
+  media_kit: ^1.2.6
+  media_kit_libs_video: ^1.0.7
+  media_kit_video: ^2.0.1
   thumbhash: ^0.1.0+1
-  video_player: ^2.10.0
   video_thumbnail: ^0.5.6
 
 dev_dependencies:
